Added get reply endpoint and changed schema to allow for this functionality
