# backend/api/openapi.yaml
@@ -96,7 +96,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
+  /reply:
+    get:
+      description: Reply Endpoint
+      parameters:
+        - in: query
+          name: comment_id
+          schema:
+            $ref: '#/components/schemas/CommentId'
+          required: true
+      responses:
+        200:
+          description: Reply Response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Comment'
+        default:
+          description: Unexpected Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 components:
   schemas:
     Error:
@@ -144,6 +167,9 @@ components:
         user_id:
           type: string
           format: uuid
+        reply_id:
+          type: string
+          format: uuid
         comment:
           type: string
           minLength: 1
@@ -170,3 +196,7 @@ components:
       type: string
       minLength: 11
       maxLength: 11
+    
+    CommentId:
+      type: string
+      format: uuid
