# backend/src/app.ts
@@ -8,6 +8,7 @@ import {middleware} from 'express-openapi-validator';
 import {fileURLToPath} from 'node:url';
 import * as user from './endpoint/user';
 import * as comment from './endpoint/comment';
+import * as reply from './endpoint/reply'
 import {respondWithError} from './util';
 
 const app = express();
@@ -35,6 +36,8 @@ app.post('/v0/user', respondWithError(user.post));
 
 app.get('/v0/comment', respondWithError(comment.get));
 app.post('/v0/comment', respondWithError(comment.post));
+
+app.get('/v0/reply', respondWithError(reply.get));
 
 app.use([(err, _req, res, _next) => {
     res.status(err.status).json({
